# setnayan-platform

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaksignore  .lighthouserc.json  ADMIN_LOGS_GUIDE.md  CHANGELOG.md  CLAUDE.md  COWORK_INBOX.md  DECISION_LOG.md  ENGINEERING_BRIEF.md  HANDOFF.md  Image_Optimization_Plan.md  MERGE_WORKFLOW.md  OWNER_ACTIONS.md  OWNER_WALKTHROUGH.md  README.md  REDESIGN_PLAN.md  SPEC.md  SPEC_COMPLETION_BRIEF.md  STATUS.md  TASK_32_TRIAGE.md  TRACKING_STATUS.md  node_modules  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  serve-vis.cjs  tsconfig.base.json  turbo.json  visual.html
.claude/: launch.json
.githooks/: pre-push
changelog.d/: 3d-drop-validation.md  3d-round-collision.md  3dplan-arrival-chain.md  3dplan-avatar-mascot.md  3dplan-booth-catalog-complete.md  3dplan-booth-chassis.md  3dplan-booth-facing.md  3dplan-booth-logo-branding.md  3dplan-booth-polish.md  3dplan-booth-types-band-live-stations.md  3dplan-cinematic-play.md  3dplan-cold-spark-tunnel.md  3dplan-collision-pass.md  3dplan-crowd-avoidance-demo.md  3dplan-crowd-avoidance-engine.md  3dplan-crowd-avoidance-lab.md  3dplan-crowd-avoidance.md  3dplan-crowd-instancing.md  3dplan-dev-lab-guard.md  3dplan-figure-mannequin-pivot.md  3dplan-figure-silhouette.md  3dplan-kit-figures.md  3dplan-kit-unify.md  3dplan-palette-roles.md  3dplan-realism-materials-wave2c.md  3dplan-room-magic-dance-mural.md  3dplan-room-magic-emotes.md  3dplan-room-magic.md  3dplan-sit-animation-lab-walkins.md  3dplan-sit-animation-scene.md  3dplan-sit-animation-seatpose.md  3dplan-sit-animation-sitcontroller.md  3dplan-sit-animation.md  3dplan-walk-spawn.md  README.md  a11y-ai-disclosure.md  a11y-alt-text.md  a11y-icon-labels.md  a11y-onboarding-chips-ghost.md  a11y-onboarding-date-pcard.md  (+1465 more)
docs/: 03_Strategy_Discussion_Log_v1.docx  (+7 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/shell/: index.html
src-tauri/src/: lib.rs  main.rs
(+5058 files in other folders)
