[package]
name = "setnayan-desktop"
version = "0.0.1"
description = "Setnayan desktop wrapper (macOS + Windows + Linux)"
authors = ["Setnayan"]
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "setnayan_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Desktop OAuth: open the provider consent flow in the system browser and catch
# the redirect on a temporary localhost loopback (Google refuses OAuth inside the
# embedded WebView). tauri-plugin-oauth runs the loopback; tauri-plugin-opener
# opens the external browser. Both are driven from the bundled web app via
# window.__TAURI__ (withGlobalTauri) under the scoped capability in capabilities/.
tauri-plugin-oauth = "2"
tauri-plugin-opener = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
